--- a/app/src/main/res/layout/fragment_our_team.xml
+++ b/app/src/main/res/layout/fragment_our_team.xml
@@ -81,7 +81,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="5dp"
+                                    android:layout_marginLeft="15dp"
                                     android:text="Asmanjas"
                                     android:textColor="@color/contrasText"
                                     android:textStyle="bold"
@@ -91,7 +91,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Mentor"
                                     android:textColor="@color/contrasText"
 
@@ -110,7 +110,8 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/shubham"
+                                    android:scaleType="centerInside"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
@@ -121,7 +122,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Shubham"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="15dp"
 
                                     />
 
@@ -129,7 +130,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginLeft="25dp"
                                     android:text="Head" />
 
                             </LinearLayout>
@@ -147,7 +148,7 @@
                                     android:layout_width="90dp"
 
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/jashleen"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
@@ -158,7 +159,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Jasleen"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="12dp"
+                                    android:layout_marginLeft="20dp"
 
                                     />
 
@@ -166,7 +167,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Member"
 
                                     />
@@ -207,7 +208,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Sucheta"
                                     android:textStyle="bold"
 
@@ -217,7 +218,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Member"
 
                                     />
@@ -246,7 +247,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Vipul"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginLeft="25dp"
 
                                     />
 
@@ -254,7 +255,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Member" />
 
                             </LinearLayout>
@@ -271,7 +272,8 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/simran"
+                                    android:scaleType="centerInside"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
@@ -282,7 +284,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Simran"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="17dp"
+                                    android:layout_marginLeft="20dp"
 
                                     />
 
@@ -290,7 +292,7 @@
                                     android:textColor="@color/contrasText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginLeft="20dp"
                                     android:text="Member"
 
                                     />
@@ -372,7 +374,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Arun"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="20dp"
+                                    android:layout_marginLeft="25dp"
                                     android:textColor="@color/contrasText"
 
                                     />
@@ -398,10 +400,12 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/nancywadhwa"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
-                                    app:civ_shadow_radius="5" />
+                                    app:civ_shadow_radius="5"
+                                    android:scaleType="centerInside"
+                                    />
 
                                 <TextView
                                     android:textColor="@color/contrasText"
@@ -409,7 +413,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Nancy"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="17dp"
+                                    android:layout_marginLeft="20dp"
 
                                     />
 
