--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,12 +6,12 @@ android:layout_height="match_parent"
 android:background="@drawable/login_page_background"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.constraintlayout.widget.Guideline
-    android:id="@+id/guidelineTop"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintGuide_percent="0.3" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.28" />
 
 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guidelineLeft"
@@ -52,6 +52,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:id="@+id/gif"
             android:layout_width="72dp"
             android:layout_height="72dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toTopOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
