--- a/app/src/main/res/layout/dialog_register_event.xml
+++ b/app/src/main/res/layout/dialog_register_event.xml
@@ -74,12 +74,14 @@
 
             <Spinner
                 android:id="@+id/spinner_unregistered_events"
-                android:textColor="@color/contrasText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:spinnerMode="dropdown"
+                android:textColor="@color/contrasText"
+                app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,7 +110,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:text="2"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toTopOf="@+id/textView3" />
