--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,11 +31,12 @@
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
-
                     android:id="@+id/button_events"
-                    android:layout_width="340dp"
-                    android:layout_height="180dp"
-                    android:layout_margin="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground">
 
@@ -92,25 +93,30 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:clipToPadding="false"
-                android:gravity="center"
-                android:orientation="horizontal"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <androidx.cardview.widget.CardView
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true"
                     android:id="@+id/button_event_registration"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="@color/igniteSecondaryLight"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <com.airbnb.lottie.LottieAnimationView
                             android:id="@+id/lottie_events_registration_loader_animation"
@@ -131,16 +137,17 @@
 
                         <TextView
                             android:layout_width="wrap_content"
-                            android:textColor="@color/contrasText"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="Event Registration"
+                            android:textColor="@color/contrasText"
                             android:textStyle="bold" />
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
-                            android:background="@color/lightgray"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp"
+                            android:background="@color/lightgray" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -155,16 +162,22 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/button_leaderboards"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline2"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="@color/igniteSecondaryLight"
-                        android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -189,8 +202,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:textColor="@color/contrasText"
                             android:text="Leaderboards"
+                            android:textColor="@color/contrasText"
                             android:textStyle="bold" />
 
                         <View
@@ -211,9 +224,16 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-            </LinearLayout>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5" />
 
-            <LinearLayout
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
@@ -222,18 +242,26 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/user_see_event_player_distribution"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
                     android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="@color/igniteSecondaryLight"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
+
                         <com.airbnb.lottie.LottieAnimationView
                             android:id="@+id/lottie_see_participants_animation"
                             android:layout_width="24dp"
@@ -254,9 +282,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/contrasText"
                             android:layout_marginTop="10dp"
                             android:text="See Participants"
+                            android:textColor="@color/contrasText"
 
                             android:textStyle="bold" />
 
@@ -269,9 +297,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:padding="5dp"
                             android:text="Check your participants for events"
+                            android:textAlignment="center"
                             android:textColor="@color/contrasText" />
 
                     </LinearLayout>
@@ -279,11 +307,17 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/button_navigation"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline3"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -291,14 +325,14 @@
                         android:background="@color/igniteSecondaryLight"
                         android:gravity="center"
                         android:orientation="vertical">
+
                         <ImageView
-                            android:src="@drawable/ic_check"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_gravity="right"
                             android:layout_marginTop="4dp"
                             android:layout_marginRight="4dp"
-                            >
+                            android:src="@drawable/ic_check">
 
                         </ImageView>
 
@@ -309,11 +343,11 @@
                             android:padding="10dp" />
 
                         <TextView
-                            android:textColor="@color/contrasText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="@string/nav_navigation"
+                            android:textColor="@color/contrasText"
                             android:textStyle="bold" />
 
                         <View
@@ -333,16 +367,17 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-            </LinearLayout>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-
-
-
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
@@ -351,30 +386,36 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/user_see_schedule"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
+                    app:layout_constraintStart_toStartOf="@+id/later_user"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
-                        android:background="@color/igniteSecondaryLight"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@color/igniteSecondaryLight"
                         android:gravity="center"
                         android:orientation="vertical">
+
                         <ImageView
                             android:id="@+id/lottie_schedule_animation"
                             android:layout_width="24dp"
-                            android:src="@drawable/ic_check"
                             android:layout_height="24dp"
                             android:layout_gravity="right"
                             android:layout_marginTop="4dp"
-
                             android:layout_marginRight="4dp"
 
-                            >
-                        </ImageView>
+                            android:src="@drawable/ic_check"
+
+                            ></ImageView>
 
                         <ImageView
                             android:layout_width="56dp"
@@ -383,11 +424,11 @@
                             android:padding="10dp" />
 
                         <TextView
-                            android:textColor="@color/contrasText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="@string/nav_schedule"
+                            android:textColor="@color/contrasText"
                             android:textStyle="bold" />
 
                         <View
@@ -464,7 +505,14 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-            </LinearLayout>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
