--- a/app/src/main/res/layout/fragment_our_team.xml
+++ b/app/src/main/res/layout/fragment_our_team.xml
@@ -71,7 +71,7 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/asmanjas"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5"
@@ -550,29 +550,6 @@
 
 
             </androidx.cardview.widget.CardView>
-
-
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="20dp"
-                android:elevation="20dp"
-                app:cardCornerRadius="10dp">
-
-
-
-                <TextView
-                    android:textColor="@color/contrasText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginTop="50dp"
-                    android:text="@string/White_space" />
-
-            </androidx.cardview.widget.CardView>
-
 
 
         </LinearLayout>
